--- a/02-modules.html
+++ b/02-modules.html
@@ -127,86 +127,24 @@
 			</div>
 		</header>
 		<main class="main">
-			<section class="section-hero">
-				<div class="hero-slider">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<div class="hero-slide">
-								<div class="hero-slide__container container">
-									<div class="hero-slide__headline bg--light-orange">
-										<h2 class="title--xl">Together we are <strong>vibrant.</strong></h2>
-									</div>
-									<div class="hero-slide__bg">
-										<img src="img/hero-img01.jpg" alt="image description" srcset="img/hero-img01@2x.jpg 2x">
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="hero-slide">
-								<div class="hero-slide__container container">
-									<div class="hero-slide__headline bg--light-blue">
-										<h2 class="title--xl">Together we are <strong>unified.</strong></h2>
-									</div>
-									<div class="hero-slide__bg">
-										<img src="img/hero-img02.jpg" alt="image description" srcset="img/hero-img02@2x.jpg 2x">
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="hero-slide">
-								<div class="hero-slide__container container">
-									<div class="hero-slide__headline bg--light-purple">
-										<h2 class="title--xl">Together we <strong>belong.</strong></h2>
-									</div>
-									<div class="hero-slide__bg">
-										<img src="img/hero-img03.jpg" alt="image description" srcset="img/hero-img03@2x.jpg 2x">
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="hero-slide">
-								<div class="hero-slide__container container">
-									<div class="hero-slide__headline bg--light-turquoise">
-										<h2 class="title--xl">Together we are <strong>Jewish Dallas.</strong></h2>
-									</div>
-									<div class="hero-slide__bg">
-										<img src="img/hero-img04.jpg" alt="image description" srcset="img/hero-img04@2x.jpg 2x">
-									</div>
-								</div>
-							</div>
-						</div>
+			<section class="section-intro bg--light-turquoise">
+				<div class="container">
+					<div class="intro-content">
+						<h5 class="subtitle subtitle--bg">featured event</h5>
+						<h2>Community Calendar</h2>
+						<p>There’s something here for everyone. Browse our all-in-one hub for local events and connection opportunities. Have a connection opportunity you’d like to share? Let us know!</p>
+						<a href="#" class="btn btn--outline-primary">
+							<svg class="icon" width="17" height="18" viewBox="0 0 17 18">
+								<path d="M12.1667 17.3334V14.8334H9.66667V13.1667H12.1667V10.6667H13.8333V13.1667H16.3333V14.8334H13.8333V17.3334H12.1667ZM2.16667 15.6667C1.70833 15.6667 1.31597 15.5036 0.989583 15.1772C0.663194 14.8508 0.5 14.4584 0.5 14.0001V4.00008C0.5 3.54175 0.663194 3.14939 0.989583 2.823C1.31597 2.49661 1.70833 2.33341 2.16667 2.33341H3V0.666748H4.66667V2.33341H9.66667V0.666748H11.3333V2.33341H12.1667C12.625 2.33341 13.0174 2.49661 13.3438 2.823C13.6701 3.14939 13.8333 3.54175 13.8333 4.00008V9.08342C13.5556 9.04175 13.2778 9.02092 13 9.02092C12.7222 9.02092 12.4444 9.04175 12.1667 9.08342V7.33341H2.16667V14.0001H8C8 14.2779 8.02083 14.5556 8.0625 14.8334C8.10417 15.1112 8.18056 15.389 8.29167 15.6667H2.16667ZM2.16667 5.66675H12.1667V4.00008H2.16667V5.66675Z"></path>
+							</svg>
+							Submit an Event
+						</a>
 					</div>
-				</div>
-				<div class="section-hero__btns container">
-					<a href="#" class="btn btn--primary">Get connected</a>
-					<a href="#" class="btn btn--outline-primary">Support our work</a>
 				</div>
 			</section>
-			<section class="section offset-bottom--0">
+			<section>
 				<div class="container">
-					<div class="event-card">
-						<div class="event-card__item">
-							<h5 class="subtitle">featured event</h5>
-							<h2 class="event-card__title">JFGD From Home To Homeland</h2>
-							<div class="event-card__description">
-								<dl>
-									<dt><strong>August 24</strong></dt>
-									<dd><strong>7-10pm</strong></dd>
-								</dl>
-								<dl>
-									<dt>Hilton Anatole</dt>
-									<dd>Dallas, TX</dd>
-								</dl>
-							</div>
-						</div>
-						<div class="event-card__item">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-							<a href="#" class="btn btn--light">RSVP Today</a>
-						</div>
-					</div>
+
 				</div>
 			</section>
 			<section class="section">
@@ -220,102 +158,69 @@
 							<h2>Discover Jewish Dallas</h2>
 							<p>There’s no one-size-fits-all way to be Jewish. And honestly, we love it that way. Discover a joyful, empowering community where the past is remembered, the present is embraced, and the future is hopeful. Welcome home to Jewish Dallas.</p>
 							<a href="#" class="btn btn--outline-primary">Discover Jewish Dallas</a>
-						</div>
-					</div>
-				</div>
-			</section>
-			<section class="section divider divider--top-start bg--light-turquoise">
-				<div class="container">
-					<div class="event-tile">
-						<div class="event-tile__content">
-							<h2 class="event-tile__title">Upcoming Events</h2>
-							<ul class="event-table">
-								<li class="event-table__item">
-									<div class="event-row">
-										<span class="event-row__date">
-											<strong>Jun</strong>
-											<strong class="event-row__date--num">9</strong>
-										</span>
-										<div class="event-row__info">
-											<span>June 14 @ 6:30 pm - 9:00 pm</span>
-											<h3 class="event-row__title">JFGD Professional Philanthropy Shofar Reception</h3>
-											<span>Host: Temple Emanu-El Dallas</span>
-										</div>
-									</div>
-								</li>
-								<li class="event-table__item">
-									<div class="event-row">
-										<span class="event-row__date">
-											<strong>Jun</strong>
-											<strong class="event-row__date--num">30</strong>
-										</span>
-										<div class="event-row__info">
-											<span>June 14 @ 6:30 pm - 9:00 pm</span>
-											<h3 class="event-row__title">Anshai Torah Yom Ha'atzmaut Celebration &amp; Annual Meeting</h3>
-											<span>Host: Temple Emanu-El Dallas</span>
-										</div>
-									</div>
-								</li>
-								<li class="event-table__item">
-									<div class="event-row">
-										<span class="event-row__date">
-											<strong>Jul</strong>
-											<strong class="event-row__date--num">17</strong>
-										</span>
-										<div class="event-row__info">
-											<span>June 14 @ 6:30 pm - 9:00 pm</span>
-											<h3 class="event-row__title">Dallas Jewish Film Fest</h3>
-											<span>Host: Temple Emanu-El Dallas</span>
-										</div>
-									</div>
-								</li>
-								<li class="event-table__item">
-									<div class="event-row">
-										<span class="event-row__date">
-											<strong>Aug</strong>
-											<strong class="event-row__date--num">9</strong>
-										</span>
-										<div class="event-row__info">
-											<span>June 14 @ 6:30 pm - 9:00 pm</span>
-											<h3 class="event-row__title">JFGD Professional Philanthropy Shofar Reception</h3>
-											<span>Host: Temple Emanu-El Dallas</span>
-										</div>
-									</div>
-								</li>
-							</ul>
-							<div class="event-tile__btn">
-								<a href="#" class="btn btn--outline-primary w-100">See full calendar</a>
+							<div class="cta-links">
+								<a href="#">Learn More</a>
+								<a href="#">Apply for Funding</a>
 							</div>
-							<form class="cta-form">
-								<h5 class="cta-form__title title--s">
-									<img src="img/brand-awareness.svg" alt="image description" class="icon">
-									Want to be in the loop? <br class="hidden--md"> Sign up for our newsletter
-								</h5>
-								<a href="#" class="btn btn--outline-primary w-100">Sign Up</a>
-							</form>
-						</div>
-						<div class="event-tile__visual visible--md">
-							<img class="image image--rounded-bottom-end" src="img/img03.jpg" alt="image description" srcset="img/img03@2x.jpg 2x">
 						</div>
 					</div>
 				</div>
 			</section>
-			<section class="section offset-bottom--0 divider divider--top-end bg--light-purple">
+			<section class="section">
 				<div class="container">
-					<div class="content-tile">
-						<div class="content-tile__headline">
-							<h2>Enriching Jewish life at home and abroad since 1911</h2>
-							<p class="text--m">Our vision is to cultivate a&nbsp; dynamic and inclusive community designed to support growth and flourishing at every stage of life. By nurturing Jewish livelihood, health, education, and identity, we seek to enrich lives daily while providing crucial support during times of crisis.</p>
-							<a href="#" class="btn btn--outline-primary">Learn more</a>
+					<div class="tile-content">
+						<div class="tile-content__visual">
+							<img class="image image--rounded-top-end" src="img/img04.jpg" alt="image description" srcset="img/img04@2x.jpg 2x">
 						</div>
-						<div class="content-tile__inner">
-							<h5 class="subtitle">Our Mission</h5>
-							<p class="title--xl">To help ensure the continuity of a strong and vibrant Jewish community in Dallas, Israel, and throughout the world.</p>
+						<div class="tile-content__inner">
+							<h2>Join us to support a strong and vibrant community.</h2>
+							<p>Your contribution sustains vital programs providing assistance to those facing adversity, strengthens Jewish education, fosters cultural enrichment, and cultivates a sense of belonging that transcends generations. With your support, you actively shape the future of our community, ensuring that our values endure and our traditions thrive.</p>
+							<a href="#" class="btn btn--outline-primary">Pledge Your Support</a>
+							<div class="cta-links">
+								<a href="#">Learn More</a>
+								<a href="#">Apply for Funding</a>
+							</div>
 						</div>
 					</div>
 				</div>
 			</section>
-			<section class="section bg--light-purple">
+			<section class="section">
+				<div class="container">
+					<div class="tile-content">
+						<div class="tile-content__inner">
+							<h2>Join us to support a strong and vibrant community.</h2>
+							<p>Your contribution sustains vital programs providing assistance to those facing adversity, strengthens Jewish education, fosters cultural enrichment, and cultivates a sense of belonging that transcends generations. With your support, you actively shape the future of our community, ensuring that our values endure and our traditions thrive.</p>
+							<a href="#" class="btn btn--outline-primary">Pledge Your Support</a>
+							<div class="cta-links">
+								<a href="#">Learn More</a>
+								<a href="#">Apply for Funding</a>
+							</div>
+						</div>
+						<div class="tile-content__visual">
+							<img class="image image--rounded-top-end" src="img/img04.jpg" alt="image description" srcset="img/img04@2x.jpg 2x">
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="section">
+				<div class="container">
+					<div class="tile-content">
+						<div class="tile-content__inner">
+							<h2>Join us to support a strong and vibrant community.</h2>
+							<p>Your contribution sustains vital programs providing assistance to those facing adversity, strengthens Jewish education, fosters cultural enrichment, and cultivates a sense of belonging that transcends generations. With your support, you actively shape the future of our community, ensuring that our values endure and our traditions thrive.</p>
+							<a href="#" class="btn btn--outline-primary">Pledge Your Support</a>
+							<div class="cta-links">
+								<a href="#">Learn More</a>
+								<a href="#">Apply for Funding</a>
+							</div>
+						</div>
+						<div class="tile-content__visual">
+							<img class="image image--rounded-top-end" src="img/img04.jpg" alt="image description" srcset="img/img04@2x.jpg 2x">
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="section">
 				<div class="container">
 					<div class="mission-tile">
 						<h2 class="mission-tile__headtitle">Our Impact</h2>
@@ -339,90 +244,6 @@
 								</li>
 							</ul>
 						</div>
-					</div>
-				</div>
-			</section>
-			<section class="section divider divider--top-start bg--blue">
-				<div class="container">
-					<div class="article-head">
-						<div class="article-head__content">
-							<h2>Stay Informed</h2>
-							<p class="text--m">Catch up on all the latest news, initiatives, and stories from our community here in Dallas and around the world.&nbsp;</p>
-						</div>
-						<div class="article-head__btn visible--md">
-							<a href="#" class="btn btn--white">See all posts</a>
-						</div>
-					</div>
-					<div class="slider-wrap">
-						<div class="slider-nav">
-							<div class="slider-nav__prev">
-								<svg class="icon" width="16" height="12" viewBox="0 0 16 12">
-									<path d="M6 12L7.4 10.55L3.85 7H16V5H3.85L7.4 1.45L6 0L0 6L6 12Z"></path>
-								</svg>
-							</div>
-							<div class="slider-nav__next">
-								<svg class="icon" width="16" height="12" viewBox="0 0 16 12">
-									<path d="M10 12L8.6 10.55L12.15 7H0V5H12.15L8.6 1.45L10 0L16 6L10 12Z"></path>
-								</svg>
-							</div>
-						</div>
-						<div class="article-slider">
-							<div class="swiper-wrapper">
-								<div class="swiper-slide">
-									<div class="article-card">
-										<h5 class="subtitle">In the News</h5>
-										<h3>JFGD increases security efforts amid rising antisemitism</h3>
-										<a href="#" class="btn-link">
-											Read Post
-											<img class="icon" src="img/arrow-right.svg" alt="image description">
-										</a>
-									</div>
-								</div>
-								<div class="swiper-slide">
-									<div class="article-card">
-										<h5 class="subtitle">Statements</h5>
-										<h3>JFGD increases security efforts amid rising antisemitism</h3>
-										<a href="#" class="btn-link">
-											Read Post
-											<img class="icon" src="img/arrow-right.svg" alt="image description">
-										</a>
-									</div>
-								</div>
-								<div class="swiper-slide">
-									<div class="article-card">
-										<h5 class="subtitle">Our Updates</h5>
-										<h3>JFGD increases security efforts amid rising antisemitism</h3>
-										<a href="#" class="btn-link">
-											Read Post
-											<img class="icon" src="img/arrow-right.svg" alt="image description">
-										</a>
-									</div>
-								</div>
-								<div class="swiper-slide">
-									<div class="article-card">
-										<h5 class="subtitle">In the News</h5>
-										<h3>JFGD increases security efforts amid rising antisemitism</h3>
-										<a href="#" class="btn-link">
-											Read Post
-											<img class="icon" src="img/arrow-right.svg" alt="image description">
-										</a>
-									</div>
-								</div>
-								<div class="swiper-slide">
-									<div class="article-card">
-										<h5 class="subtitle">In the News</h5>
-										<h3>JFGD increases security efforts amid rising antisemitism</h3>
-										<a href="#" class="btn-link">
-											Read Post
-											<img class="icon" src="img/arrow-right.svg" alt="image description">
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="hidden--md">
-						<a href="#" class="btn btn--white w-100">See all posts</a>
 					</div>
 				</div>
 			</section>
