--- a/01-home.html
+++ b/01-home.html
@@ -31,6 +31,9 @@
 						<img src="img/logo.svg" width="230" alt="Jewish Federation of Greater Dallas">
 					</a>
 					<div class="nav-drop">
+						<a href="#" class="nav-drop__logo">
+							<img src="img/logo-sm.svg" width="40" alt="Jewish Federation of Greater Dallas">
+						</a>
 						<nav class="nav">
 							<ul class="header-link">
 								<li class="header-link__item"><a class="header-link__link" href="#">Donor Portal</a></li>
@@ -111,7 +114,9 @@
 										</button>
 										<input type="text" class="form-control" placeholder="Search Here">
 										<button class="btn-cancel">
-											<img src="img/close-small.svg" alt="image description">
+											<svg class="icon" width="10" height="10" viewBox="0 0 10 10">
+												<path d="M1.06342 9.64805L0 8.58463L3.7731 4.81152L0 1.06342L1.06342 0L4.83652 3.7731L8.58463 0L9.64805 1.06342L5.87495 4.81152L9.64805 8.58463L8.58463 9.64805L4.83652 5.87495L1.06342 9.64805Z"></path>
+											</svg>
 										</button>
 									</div>
 									<button class="btn-search">
@@ -209,7 +214,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="section">
+			<section class="section offset-bottom--xl">
 				<div class="container">
 					<div class="tile-content">
 						<div class="tile-content__visual double">
@@ -224,7 +229,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="section divider divider--top-start bg--light-turquoise">
+			<section class="section angle angle--top-start bg--light-turquoise">
 				<div class="container">
 					<div class="event-tile">
 						<div class="event-tile__content">
@@ -300,13 +305,13 @@
 					</div>
 				</div>
 			</section>
-			<section class="section offset-bottom--0 divider divider--top-end bg--light-purple">
+			<section class="section offset-bottom--0 angle angle--top-end bg--light-purple">
 				<div class="container">
 					<div class="content-tile">
 						<div class="content-tile__headline">
 							<h2>Enriching Jewish life at home and abroad since 1911</h2>
-							<p class="text--m">Our vision is to cultivate a&nbsp; dynamic and inclusive community designed to support growth and flourishing at every stage of life. By nurturing Jewish livelihood, health, education, and identity, we seek to enrich lives daily while providing crucial support during times of crisis.</p>
-							<a href="#" class="btn btn--outline-primary">Learn more</a>
+							<p class="text--md">Our vision is to cultivate a&nbsp; dynamic and inclusive community designed to support growth and flourishing at every stage of life. By nurturing Jewish livelihood, health, education, and identity, we seek to enrich lives daily while providing crucial support during times of crisis.</p>
+							<a href="#" class="btn btn--outline-primary w-100">Learn more</a>
 						</div>
 						<div class="content-tile__inner">
 							<h5 class="subtitle">Our Mission</h5>
@@ -315,11 +320,11 @@
 					</div>
 				</div>
 			</section>
-			<section class="section bg--light-purple">
+			<section class="section offset-bottom--xl bg--light-purple">
 				<div class="container">
-					<div class="mission-tile">
-						<h2 class="mission-tile__headtitle">Our Impact</h2>
-						<div class="mission-tile__content">
+					<div class="tile-wrap">
+						<h2 class="tile-wrap__headtitle">Our Impact</h2>
+						<div class="tile-wrap__content">
 							<ul class="highlights">
 								<li class="highlights__item">
 									<span class="highlights__num">80,000</span>
@@ -342,15 +347,15 @@
 					</div>
 				</div>
 			</section>
-			<section class="section divider divider--top-start bg--blue">
+			<section class="section angle angle--top-start bg--blue">
 				<div class="container">
-					<div class="article-head">
-						<div class="article-head__content">
+					<div class="section-head">
+						<div class="section-head__content">
 							<h2>Stay Informed</h2>
-							<p class="text--m">Catch up on all the latest news, initiatives, and stories from our community here in Dallas and around the world.&nbsp;</p>
+							<p class="text--md">Catch up on all the latest news, initiatives, and stories from our community here in Dallas and around the world.&nbsp;</p>
 						</div>
-						<div class="article-head__btn visible--md">
-							<a href="#" class="btn btn--white">See all posts</a>
+						<div class="section-head__btn visible--md">
+							<a href="#" class="btn btn--outline-white">See all posts</a>
 						</div>
 					</div>
 					<div class="slider-wrap">
@@ -372,9 +377,11 @@
 									<div class="article-card">
 										<h5 class="subtitle">In the News</h5>
 										<h3>JFGD increases security efforts amid rising antisemitism</h3>
-										<a href="#" class="btn-link">
+										<a href="#" class="article-card__btn">
 											Read Post
-											<img class="icon" src="img/arrow-right.svg" alt="image description">
+											<svg class="icon" width="16" height="12" viewBox="0 0 16 12">
+												<path d="M10 12L8.6 10.55L12.15 7H0V5H12.15L8.6 1.45L10 0L16 6L10 12Z"></path>
+											</svg>
 										</a>
 									</div>
 								</div>
@@ -382,9 +389,11 @@
 									<div class="article-card">
 										<h5 class="subtitle">Statements</h5>
 										<h3>JFGD increases security efforts amid rising antisemitism</h3>
-										<a href="#" class="btn-link">
+										<a href="#" class="article-card__btn">
 											Read Post
-											<img class="icon" src="img/arrow-right.svg" alt="image description">
+											<svg class="icon" width="16" height="12" viewBox="0 0 16 12">
+												<path d="M10 12L8.6 10.55L12.15 7H0V5H12.15L8.6 1.45L10 0L16 6L10 12Z"></path>
+											</svg>
 										</a>
 									</div>
 								</div>
@@ -392,9 +401,11 @@
 									<div class="article-card">
 										<h5 class="subtitle">Our Updates</h5>
 										<h3>JFGD increases security efforts amid rising antisemitism</h3>
-										<a href="#" class="btn-link">
+										<a href="#" class="article-card__btn">
 											Read Post
-											<img class="icon" src="img/arrow-right.svg" alt="image description">
+											<svg class="icon" width="16" height="12" viewBox="0 0 16 12">
+												<path d="M10 12L8.6 10.55L12.15 7H0V5H12.15L8.6 1.45L10 0L16 6L10 12Z"></path>
+											</svg>
 										</a>
 									</div>
 								</div>
@@ -402,9 +413,11 @@
 									<div class="article-card">
 										<h5 class="subtitle">In the News</h5>
 										<h3>JFGD increases security efforts amid rising antisemitism</h3>
-										<a href="#" class="btn-link">
+										<a href="#" class="article-card__btn">
 											Read Post
-											<img class="icon" src="img/arrow-right.svg" alt="image description">
+											<svg class="icon" width="16" height="12" viewBox="0 0 16 12">
+												<path d="M10 12L8.6 10.55L12.15 7H0V5H12.15L8.6 1.45L10 0L16 6L10 12Z"></path>
+											</svg>
 										</a>
 									</div>
 								</div>
@@ -412,9 +425,11 @@
 									<div class="article-card">
 										<h5 class="subtitle">In the News</h5>
 										<h3>JFGD increases security efforts amid rising antisemitism</h3>
-										<a href="#" class="btn-link">
+										<a href="#" class="article-card__btn">
 											Read Post
-											<img class="icon" src="img/arrow-right.svg" alt="image description">
+											<svg class="icon" width="16" height="12" viewBox="0 0 16 12">
+												<path d="M10 12L8.6 10.55L12.15 7H0V5H12.15L8.6 1.45L10 0L16 6L10 12Z"></path>
+											</svg>
 										</a>
 									</div>
 								</div>
@@ -422,7 +437,7 @@
 						</div>
 					</div>
 					<div class="hidden--md">
-						<a href="#" class="btn btn--white w-100">See all posts</a>
+						<a href="#" class="btn btn--outline-white w-100">See all posts</a>
 					</div>
 				</div>
 			</section>
@@ -521,7 +536,7 @@
 									<input type="email" placeholder="Email Address">
 								</div>
 								<div class="form-field">
-									<button class="btn btn--white">Submit</button>
+									<button class="btn btn--outline-white">Submit</button>
 								</div>
 							</form>
 						</div>
